--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
 /*
-Author URI: http://webthemez.com/
-Note: 
-Licence under Creative Commons Attribution 3.0 
-Do not remove the back-link in this web template 
+Author URI: https://afaan.ml/
 -------------------------------------------------------*/
 
 @charset "utf-8";
